# swagger-output.json
@@ -34,10 +34,55 @@
     },
     "/users/register": {
       "post": {
-        "tags": [],
+        "tags": [
+          "Users"
+        ],
+        "summary": "註冊一位會員",
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "parameters_name",
+            "in": "body",
+            "description": "會員資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nickName": {
+                  "type": "string",
+                  "example": "會員暱稱"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "name@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "name1234"
+                }
+              },
+              "required": [
+                "nickName",
+                "email",
+                "password"
+              ]
+            },
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功註冊會員",
+            "schema": {
+              "$ref": "#/definitions/Users"
+            }
+          },
+          "400": {
+            "description": "新增貼文失敗",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        }
       }
     },
     "/posts/": {
@@ -127,42 +172,59 @@
     "Posts": {
       "type": "object",
       "properties": {
-        "data": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "editor": {
-                "type": "object",
-                "properties": {
-                  "_id": {
-                    "type": "string",
-                    "example": "001"
-                  },
-                  "nickName": {
-                    "type": "string",
-                    "example": "qq"
-                  },
-                  "avatar": {
-                    "type": "string",
-                    "example": "https://..."
-                  }
-                }
-              },
-              "content": {
-                "type": "string",
-                "example": "搶到想要的 NFT 啦"
-              },
-              "image": {
-                "type": "string",
-                "example": "https://..."
-              },
-              "createdAt": {
-                "type": "string",
-                "example": "2022-05-09T08:39:25.455Z"
-              }
+        "editor": {
+          "type": "object",
+          "properties": {
+            "_id": {
+              "type": "string",
+              "example": "001"
+            },
+            "nickName": {
+              "type": "string",
+              "example": "會員暱稱"
+            },
+            "avatar": {
+              "type": "string",
+              "example": "https://..."
             }
           }
+        },
+        "content": {
+          "type": "string",
+          "example": "搶到想要的 NFT 啦"
+        },
+        "image": {
+          "type": "string",
+          "example": "https://..."
+        },
+        "createdAt": {
+          "type": "string",
+          "example": "2022-05-09T08:39:25.455Z"
+        }
+      }
+    },
+    "Users": {
+      "type": "object",
+      "properties": {
+        "nickName": {
+          "type": "string",
+          "example": "會員暱稱"
+        },
+        "gender": {
+          "type": "boolean",
+          "example": true
+        },
+        "avatar": {
+          "type": "string",
+          "example": "https://..."
+        },
+        "email": {
+          "type": "string",
+          "example": "name@gmail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "name1234"
         }
       }
     },
